frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: argo-vue-ser
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80
  selector:
    app: vuedep
